// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`incrementAsync 1`] = `
{
  "f": [
    [
      "type",
      "MENU_ITEM",
    ],
    [
      "index",
      300,
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          "Increment Async",
        ],
        "props": {
          "f": [
            [
              "onClick",
              {
                "$": "Bind",
                "f": [
                  [
                    {
                      "$": "#this",
                    },
                    {
                      "$": "undefined",
                    },
                  ],
                  [
                    {
                      "$": "#fun",
                    },
                    {
                      "$": "runIncrementAsync",
                    },
                  ],
                  [
                    {
                      "$": "#args",
                    },
                    [
                      {
                        "$": "extrasDispatch",
                      },
                    ],
                  ],
                ],
              },
            ],
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;

exports[`incrementIfOdd 1`] = `
{
  "f": [
    [
      "type",
      "MENU_ITEM",
    ],
    [
      "index",
      400,
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          "Increment if odd",
        ],
        "props": {
          "f": [
            [
              "onClick",
              {
                "$": "Bind",
                "f": [
                  [
                    {
                      "$": "#this",
                    },
                    null,
                  ],
                  [
                    {
                      "$": "#fun",
                    },
                    {
                      "$": "_signal",
                    },
                  ],
                  [
                    {
                      "$": "#args",
                    },
                    [
                      {
                        "$": "extrasDispatch",
                      },
                      "INCREMENT",
                      {
                        "$": "undefined",
                      },
                    ],
                  ],
                ],
              },
            ],
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;

exports[`incrementIfOdd 2`] = `
{
  "f": [
    [
      "type",
      "MENU_ITEM",
    ],
    [
      "index",
      400,
    ],
    [
      "value",
      {
        "$": "ReactElement",
        "children": [
          "Increment if odd",
        ],
        "props": {
          "f": [
            [
              "onClick",
              {
                "$": "nop",
              },
            ],
            [
              "children",
              {
                "$": "undefined",
              },
            ],
          ],
        },
        "type": "button",
      },
    ],
  ],
}
`;
